# Robotica

./: .gitignore  .gitmodules  CMakeLists.txt  include.h  main  main.cpp  main_theory_plus_ik.cpp  standard_positions.hpp  tree.dot
include/: bot_mover.hpp  file_writer.hpp
placeholders/: Board.h  Coord.h  GameTheorie.h  InverseKinematica.h  SystemControl.h  Vision.h
src/: bot_mover.cpp  file_writer.cpp
tests/: main_speltheorie.cpp
